# parsing

py/: pyproject.toml
py/src/: cyk.py  grammar.py  main.py  unger.py
py/src/parsing/: cyk.py  grammar.py
py/tests/: test_cyk.py
