[project]
name = "unger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "parsing"
